Fix named beans detection and route builder class hierarchy.